# serde_a3da

./: Cargo.toml  serde.rs
assets/: CAMPV001_BASE.a3da
src/: de.rs  error.rs  lib.rs  ser.rs
