[package]
name = "serde_a3da"
version = "0.1.0"
authors = ["Waelwindows <waelwindows@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
slab_tree = "0.3.2"
thiserror = "1.0.22"

[dev-dependencies]
serde_derive = "1.0.117"
